--- a/DocumentManagemnetService/Views/MenuView.xaml
+++ b/DocumentManagemnetService/Views/MenuView.xaml
@@ -43,14 +43,13 @@
                     <Button Style="{StaticResource MaterialDesignToolForegroundButton}" 
                         Command="{Binding AccountCommand}"
                         CommandParameter="{x:Static Dock.Left}"
-                        DockPanel.Dock="Left" Margin="8">
-                        <materialDesign:PackIcon Kind="Settings" Height="26" Width="22" HorizontalAlignment="Center" />
-                    </Button>
+                        DockPanel.Dock="Left" Margin="8"/>
                 </StackPanel>
             </DockPanel>
             <Frame x:Name="MainFrame"
                    NavigationUIVisibility="Hidden"
-                   Margin="0,70,0,0" Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}" />
+                   Margin="0,70,0,0" 
+                   Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}" />
         </Grid>
     </materialDesign:DrawerHost>
 </Window>
