--- a/DocumentManagemnetService/Views/RouteEditorView.xaml
+++ b/DocumentManagemnetService/Views/RouteEditorView.xaml
@@ -27,7 +27,7 @@
 
             <StackPanel Orientation="Vertical">
                 <TextBlock Margin="10" Text="Название маршрута" FontSize="16"/>
-                <TextBox Text="{Binding RouteName}"
+                <TextBox Text="{Binding RouteName, UpdateSourceTrigger=PropertyChanged}"
                 Style="{StaticResource MaterialDesignOutlinedTextBox}"  Width="379"
                          Foreground="Black" FontWeight="Bold" BorderBrush="Black"/>
             </StackPanel>
