--- a/DocumentManagemnetService/Views/RoutesView.xaml
+++ b/DocumentManagemnetService/Views/RoutesView.xaml
@@ -19,19 +19,19 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-            <TextBox
-                    Margin="15,0,0,0"
+            <StackPanel Orientation="Horizontal">
+                <TextBox
+                    Margin="10,0"
                     Width="200"
                     materialDesign:HintAssist.Hint="Поиск"
-                    Text="{Binding SearchQuery}"/>
-            <materialDesign:PackIcon Kind="Magnify" Height="26" Width="25" />
-            <ComboBox Style="{StaticResource MaterialDesignDataGridComboBox}"
-                        Margin="10"
-                        Width="160"
-                      ItemsSource="{Binding Categories}"
-                      SelectedItem="{Binding SelectedCategory}"
-                      materialDesign:HintAssist.Hint="Категория документа" 
-                          Foreground="White" BorderBrush="White"/>
+                    Text="{Binding SearchQuery, UpdateSourceTrigger=PropertyChanged}"/>
+                <materialDesign:PackIcon Kind="Magnify" Height="26" Width="25" />
+            </StackPanel>
+            <ComboBox ItemTemplate="{StaticResource ComboBoxTemplate}" 
+                      ItemsSource="{Binding Categories}" 
+                      Margin="20,0,0,0" 
+                      materialDesign:HintAssist.Hint="Тип документа" Height="33" Width="156">
+            </ComboBox>
         </StackPanel>
 
         <ListBox Name="RoutesList" 
@@ -71,7 +71,7 @@
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="1">
             <Button x:Name="Cancel"
-                    Content="Отмена" Width="140"
+                    Content="Назад" Width="140"
                     Command="{Binding CancelCommand}"
                     BorderBrush="Black"
                     Background="{x:Null}"/>
