--- a/DocumentManagemnetService/Views/UserEditView.xaml
+++ b/DocumentManagemnetService/Views/UserEditView.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DocumentManagementService.Views"
-              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+             xmlns:local11="clr-namespace:DocumentManagementService"
+                xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" ResizeMode="NoResize" Height="450" Width="850">
 
     <Grid Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
@@ -18,28 +20,44 @@
         <StackPanel DataContext="{Binding CurrentUser}" Margin="5"  Grid.Column="0" Grid.Row="1">
 
             <TextBlock  Text="Фамилия" FontSize="20"/>
-            <TextBox Margin="10"                
-                     Text="{Binding SecondName, UpdateSourceTrigger=PropertyChanged}" Height="32"/>
+            <TextBox Margin="10"  MaxLength="30"
+                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"
+                     Text="{Binding SecondName, UpdateSourceTrigger=PropertyChanged}" Height="32" PreviewKeyDown="TextBox_PreviewKeyDown"/>
 
             <TextBlock Text="Имя" FontSize="20"/>
-            <TextBox Margin="10"                  
-                     Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}" Height="32"/>
+            <TextBox Margin="10" MaxLength="30"
+                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"           
+                     Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}" Height="32" PreviewKeyDown="TextBox_PreviewKeyDown"/>
 
             <TextBlock Text="Отчество" FontSize="20"/>
-            <TextBox Margin="10"
+            <TextBox Margin="10" MaxLength="30"
+                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"
                     Text="{Binding ThirdName, UpdateSourceTrigger=PropertyChanged}"                    
-                     Height="32"/>
+                     Height="32" PreviewKeyDown="TextBox_PreviewKeyDown"/>
 
             <TextBlock Text="Email" FontSize="20"/>
             <TextBox x:Name="EmailBox"
-                    Margin="10" 
+                     IsReadOnly="{Binding IsReadOnly}"
+                    Margin="10" MaxLength="30"
+                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"
                     Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"             
-                    Height="32"/>
+                    Height="32" PreviewKeyDown="TextBox_PreviewKeyDown"/>
 
             <TextBlock Text="Телефон" FontSize="20"/>
-            <TextBox Margin="10"
-                    Text="{Binding Telephone, UpdateSourceTrigger=PropertyChanged}"
-                     Height="32"/>
+            <TextBox Margin="10" MaxLength="30"
+                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" Height="32" PreviewKeyDown="TextBox_PreviewKeyDown">
+                <TextBox.Text>
+                    <Binding Path="Telephone" 
+                         Mode="TwoWay" 
+                         UpdateSourceTrigger="PropertyChanged"
+                         ValidatesOnNotifyDataErrors="True"
+                         NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <local11:MinLengthValidationRule MinLength="10"/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.Row="1">
@@ -51,19 +69,19 @@
                     ItemTemplate="{StaticResource ModelComboboxItem}"
                     Height="32" Width="180"/>
 
-                <Button Background="{x:Null}" Command="{Binding AddRoleCommand}" BorderBrush="{x:Null}">
+                <Button x:Name="AddButton" Background="{x:Null}" Command="{Binding AddRoleCommand}" BorderBrush="{x:Null}">
                     <materialDesign:PackIcon Kind="Add"/>
                 </Button>
 
-                <Button Background="{x:Null}" BorderBrush="{x:Null}" Command="{Binding EditRoleCommand}">
+                <Button x:Name="EditButton" Background="{x:Null}" BorderBrush="{x:Null}" Command="{Binding EditRoleCommand}">
                     <materialDesign:PackIcon Kind="Pencil"/>
                 </Button>
 
             </StackPanel>
 
-            <TextBlock Text="Отдел" FontSize="20"/>
+            <TextBlock x:Name="Unit" Text="Отдел" FontSize="20"/>
 
-            <StackPanel Orientation="Horizontal">
+            <StackPanel x:Name="UnitSelection" Orientation="Horizontal">
                 <ComboBox ItemTemplate="{StaticResource ModelComboboxItem}" 
                       Margin="10"         
                       SelectedItem="{Binding SelectedUnit}"
@@ -87,7 +105,12 @@
                          materialDesign:HintAssist.Hint="Пароль"
                          materialDesign:PasswordBoxAssist.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                          materialDesign:TextFieldAssist.HasClearButton="True"
+                         MaxLength="30"
+                            materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"
                          Style="{StaticResource MaterialDesignRevealPasswordBox}" Width="278" Height="32"/>
+            
+
+            
 
             <Button Command="{Binding SaveUserCommand}" Content="Сохранить" 
                         Width="105" Margin="0,10" 
@@ -95,7 +118,7 @@
 
         </StackPanel>
 
-        <StackPanel Visibility="{Binding IsAddRoleVisible}" Grid.Column="2" Grid.Row="1" Margin="0,0,0,261" HorizontalAlignment="Center">
+        <StackPanel Visibility="{Binding IsAddRoleVisible}" Grid.Column="2" Margin="0,0,0,296" HorizontalAlignment="Center">
             <TextBox Text="{Binding CurrentRole, UpdateSourceTrigger=PropertyChanged}" 
                      materialDesign:HintAssist.HelperText="Название должности" 
                       MaxLength="50"
@@ -116,8 +139,8 @@
 
         </StackPanel>
 
-        <StackPanel Visibility="{Binding IsAddUnitVisible}" Grid.Column="2" Grid.Row="1" 
-                    Margin="0,140,0,0" HorizontalAlignment="Center">
+        <StackPanel Visibility="{Binding IsAddUnitVisible}" Grid.Column="2" 
+                    Margin="0,140,0,209" HorizontalAlignment="Center">
             <TextBox Text="{Binding CurrentUnit, UpdateSourceTrigger=PropertyChanged}" 
                      materialDesign:HintAssist.HelperText="Название отдела" 
                      MaxLength="50"
@@ -125,10 +148,10 @@
                      Width="310"/>
 
 
-               <Button Command="{Binding SaveUnitCommand}" Content="Сохранить" Margin="5" Width="103" 
+            <Button Command="{Binding SaveUnitCommand}" Content="Сохранить" Margin="5" Width="103" 
                     Height="30" BorderBrush="{x:Null}" Background="{x:Null}"/>
 
-            </StackPanel>
+        </StackPanel>
 
 
 
