--- a/DocumentManagemnetService/Views/CompanyRegisterView.xaml
+++ b/DocumentManagemnetService/Views/CompanyRegisterView.xaml
@@ -47,6 +47,7 @@
             <TextBox Style="{StaticResource MaterialDesignFilledTextBox}" 
                      Text="{Binding User.Email, UpdateSourceTrigger=PropertyChanged}"
                      Margin="10" Width="240" Height="45" 
+                     local1:InputRestriction.AllowedPattern="^[a-zA-Z0-9@.]*$"
                      materialDesign:HintAssist.Hint="Email" PreviewKeyDown="TextBox_PreviewKeyDown"
                                           MaxLength="30"
                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"/>
@@ -77,6 +78,7 @@
                      Margin="10" Width="240" Height="45"
                      materialDesign:HintAssist.Hint="Название организации"
                      MaxLength="50"
+                     local1:InputRestriction.AllowedPattern="^[a-zA-Zа-яА-Я]*$"
                     materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed"/>
             <PasswordBox
                 materialDesign:HintAssist.Hint="Пароль"          
@@ -84,14 +86,18 @@
                 Width="240" KeyDown="TextBox_PreviewKeyDown"
                 MaxLength="30"
                  materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed">
-                <materialDesign:PasswordBoxAssist.Password>
+                <materialDesign:PasswordBoxAssist.Password                 
+                   >
+                    
                     <Binding Path="Password" 
                          Mode="TwoWay" 
+                             
                          UpdateSourceTrigger="PropertyChanged"
                          ValidatesOnNotifyDataErrors="True"
                          NotifyOnValidationError="True">
                         <Binding.ValidationRules>
                             <local1:MinLengthValidationRule MinLength="6"/>
+                           
                         </Binding.ValidationRules>
                     </Binding>
                 </materialDesign:PasswordBoxAssist.Password>
